webpack context 改成 /client

--- a/server/view/home.hbs
+++ b/server/view/home.hbs
@@ -1,5 +1,5 @@
-{{> start style="/css/style.css" }}
+{{> start style="/static/css/style.css" }}
 
 home site
 
-{{> end script="/js/main.js" }}
+{{> end script="/static/js/main.js" }}
