--- a/server/view/partial/start.hbs
+++ b/server/view/partial/start.hbs
@@ -10,7 +10,7 @@
   <meta http-equiv="Cache-Control" content="no-cache">
   <meta name="keywords" content="{{keywords}}">
   <meta name="description" content="{{description}}">
-  <meta name="staticRoot" content="{{global.staticRoot}}">
+  <meta name="staticRoot" content="{{global.client.publicPath}}/static">
   {{#if mobile}}
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
   <meta name="apple-mobile-web-app-capable" content="yes">
@@ -21,7 +21,7 @@
   {{/if}}
   <title>{{title}}</title>
 	{{#if style}}
-	<link rel="stylesheet" href="{{global.staticRoot}}{{style}}?v={{global.version}}">
+	<link rel="stylesheet" href="{{global.client.publicPath}}{{style}}?v={{global.version}}">
 	{{/if}}
 </head>
 <body>
