--- a/server/view/vue.hbs
+++ b/server/view/vue.hbs
@@ -3,11 +3,11 @@
 <head>
 	<meta charset="UTF-8">
 	<title>vue test</title>
-	<link rel="stylesheet" href="{{global.staticRoot}}/js/vue.css?v={{global.version}}">
+	<link rel="stylesheet" href="{{global.client.publicPath}}/static/js/vue.css?v={{global.version}}">
 </head>
 <body>
 	<app></app>
-	<script src="{{global.staticRoot}}/js/common.js?v={{global.version}}"></script>
-	<script src="{{global.staticRoot}}/js/vue.js?v={{global.version}}"></script>
+	<script src="{{global.client.publicPath}}/static/js/common.js?v={{global.version}}"></script>
+	<script src="{{global.client.publicPath}}/static/js/vue.js?v={{global.version}}"></script>
 </body>
 </html>
